--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
 
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  </head>
+  <body>
+    <a-scene mindar-image="imageTargetSrc: https://arracheur2moldu.github.io/ar57/targets.mind;" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false"> 
+      <a-assets>
+	      <img id="card1" src="https://arracheur2moldu.github.io/ar57/carte%20postal%20barcelona%201.png" />
+        <img id="card2" src="https://arracheur2moldu.github.io/ar57/carte%20postal%20barcelona%202.png" />
+        <img id="card3" src="https://arracheur2moldu.github.io/ar57/carte%20postal%20barcelona%203.png" />
+        <img id="card4" src="https://arracheur2moldu.github.io/ar57/carte%20postal%20barcelona%204.png" />
+        </a-assets>
+        
+      <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+      <a-entity mindar-image-target="targetIndex: 0">
+        <a-plane src="#card1" opaciy="0.5" position="0 0 0" height="1.5" width="1" rotation="0 0 0"></a-plane>
+      </a-entity>
+            <a-entity mindar-image-target="targetIndex: 1">
+        <a-plane src="#card2" opaciy="0.5" position="0 0 0" height="1" width="1.5" rotation="0 0 0"></a-plane>
+      </a-entity>
+            <a-entity mindar-image-target="targetIndex: 2">
+        <a-plane src="#card3" opaciy="0.5" position="0 0 0" height="1.5" width="1" rotation="0 0 0"></a-plane>
+      </a-entity>
+            <a-entity mindar-image-target="targetIndex: 3">
+        <a-plane src="#card4" opaciy="0.5" position="0 0 0" height="1.5" width="1" rotation="0 0 0"></a-plane>
+      </a-entity>
+    </a-scene>
+  </body>
+</html>
